--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Portfolio Website</title>
+    <title>Sunny Kumar</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
+    <link rel="icon" type="image/x-icon" href="/Images/favicon.ico">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
@@ -43,7 +45,7 @@
                <div class="text-1">Hello, My name is</div>
                <div class="text-2">Sunny Kumar</div>
                <div class="text-3">And I'm a <span class="typing"></span> </div>
-               <a href="#"><i class="fa fa-download" aria-hidden="true"></i>  Download My CV</a>
+               <a href="/Images/Udemy Certificate.pdf" download><i class="fa fa-download" aria-hidden="true"></i>  Download My CV</a>
            </div>
        </div>
    </section>
@@ -54,11 +56,11 @@
         <h2 class="title">About Me</h2>
         <div class="about-content">
            <div class="column left">
-               <img src="/Images/Cat.jpg" alt="">
+               <img src="/Images/img.jpg" alt="">
            </div>
            <div class="column right">
             <div class="text">I'm currenlty a 4th year UG student of the department of <span class="typing-2"></span> </div>
-            <p class="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut dicta maxime harum, iure ex cumque architecto tempora quisquam ad reiciendis impedit omnis corporis? Architecto eaque nesciunt voluptate ad nostrum alias eos, eligendi beatae accusantium recusandae aspernatur omnis adipisci nemo debitis iure nihil quae quo ea eum tenetur inventore molestiae esse ducimus? Eius,ur,nt voluptate ad nostrum alias eos, eligendi beatae accusantium recusandae aspernatur omnis adipisci nemo debitis iure nihil quae quo ea eum tenetur inventore molestiae esse ducimus? Eius,ur</p>
+            <p class="para">Hi myself Sunny Kumar . I am a student of Mechanical engineering department of IIT Kharagpur. I have intrest in IT sector. I did many projects related to web design and app Development, with the help of these project i learned a lot. I mentioned all projects and my knowladge in different programing language.   </p>
            </div>
            </div>
         </div>
@@ -75,7 +77,8 @@
                <div class="box">
                    <i class="fas fa-paint-brush"></i>
                    <div class="text">Web Development</div>
-                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elitlpa deleniti  quia aliquam animi, maxime culpa deleniti</p>
+                   <p>HTML,CSS,JavaScript
+                     <br> Node.js,React.js,Mongodb <br> express.js,Bootstrap, jquery,materialUI,JSON,Mongoose</p>
                </div>
            </div>
 
@@ -84,7 +87,7 @@
             <div class="box">
                 <i class="fas fa-mobile"></i>
                 <div class="text">Flutter Development</div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam aspia aliquam animi, maxime culpa delenitii</p>
+                <p>Basics knowladge</p>
             </div>
         </div>
 
@@ -93,7 +96,7 @@
             <div class="box">
                 <i class="fas fa-code"></i>
                 <div class="text">Data Structure and Algorithm</div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.ia aliquam animi, maxime culiti</p>
+                <p>Applied Data Structures and Algorithms(AlgoZenith-AZ201)</p>
             </div>
         </div>
 
@@ -109,8 +112,7 @@
         <div class="skill-content">
             <div class="column left">
                 <div class="text"> My skills</div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas expedita nobis incidunt deserunt, deleniti tempore facilis ducimus culpa magnam, libero sint eligendi officiis quisquam est repellendus dolores nesciunt voluptates itaque.</p>
-                <a href="#">Read more</a>
+                <p>I have a knowladge of differnt languages . You can see on right side , my experience in that perticular language</p>
             </div>
             <div class="column right">
                 <div class="bars">
@@ -161,37 +163,44 @@
         <div class="carousel owl-carousel owl-theme">
             <div class="card">
                 <div class="box">
-                    <img src="/Images/1.jpg" alt="image">
-                    <div class="text">Someone name</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia nam modi natus quas enim non nemo adipisci unde? Unde id </p>
+                    <img src="/Images/colour Zilla.png" alt="image">
+                    <div class="text">Color Zilla</div>
+                    <p>This is the simple chrome extention which pick colour in hex code from current active window and get copied automatically in clipboard.  </p>
                 </div>
             </div>
             <div class="card">
                 <div class="box">
-                    <img src="/Images/2.jpg" alt="image">
-                    <div class="text">Someone name</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia nam modi natus quas enim non nemo adipisci unde? Unde id </p>
+                    <img src="/Images/calculator.png" alt="image">
+                    <div class="text">BMI Calculator</div>
+                    <p>Right Body to Weight ratio is the sign of good health , So I decided to make to BMI calculator app using Flutter which helps the people to track their height to weight ratio  </p>
                 </div>
             </div>
             <div class="card">
                 <div class="box">
-                    <img src="/Images/3.jpg" alt="image">
-                    <div class="text">Someone name</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia nam modi natus quas enim non nemo adipisci unde? Unde id </p>
+                    <img src="/Images/codeflix.png" alt="image">
+                    <div class="text">CodeFlix</div>
+                    <p>This Project is inspired by coding in friendcircle . In this web app multiple friends can do code on single platform by creating a room . All friends will get notification when someone join and leave. </p>
                 </div>
             </div>
             <div class="card">
                 <div class="box">
-                    <img src="/Images/4.jpg" alt="image">
-                    <div class="text">Someone name</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia nam modi natus quas enim non nemo adipisci unde? Unde id </p>
+                    <img src="/Images/VayaamSaala.png" alt="image">
+                    <div class="text">VayaamSaala</div>
+                    <p>Fitness is the key of happy life . I observe that (for me) finding a good exercise for specific body part was difficult. So i made this project which help the people to find best exercise for specific body part easy . It also search youtube video of that exercises.  </p>
                 </div>
             </div>
             <div class="card">
                 <div class="box">
-                    <img src="/Images/5.jpg" alt="image">
-                    <div class="text">Someone name</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia nam modi natus quas enim non nemo adipisci unde? Unde id </p>
+                    <img src="/Images/rangeela.png" alt="image">
+                    <div class="text">Rangeela</div>
+                    <p>This is the Simple Project . Which change the console log colour. </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="box">
+                    <img src="/Images/portfolio.png" alt="image">
+                    <div class="text">Portfolio</div>
+                    <p>I created this site to describe myself, also to mention all my skills and all my projects on single platform. </p>
                 </div>
             </div>
         </div>
@@ -205,7 +214,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                    <p>For Contact mail me</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
@@ -232,20 +241,22 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="#">
+                    <form action="https://formsubmit.co/kgpian121@gmail.com" method="post">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" required>
+                                <input type="text" placeholder="Name" name="name" required>
                             </div>
                             <div class="field email">
-                                <input type="email" placeholder="Email" required>
+                                <input type="email" placeholder="Email" name="email" required>
+                                <input type="hidden" name="_next" value="https://sk090.netlify.app/page/thankyou.html">
+                                <input type="hidden" name="_subject" value="new mail wooooo!!!">
                             </div>
                         </div>
                         <div class="field">
-                            <input type="text" placeholder="Subject" required>
+                            <input type="text" placeholder="Subject" name="name" required>
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+                            <input type="text" placeholder="Message" name="name" required>
                         </div>
                         <div class="button">
                             <button type="submit">Send message</button>
@@ -258,7 +269,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://github.com/Sk09032" target="_blank">Sunny Kumar</a> |  Build with Love <span class="far fa-heart"></span>.</span>
+        <span>Created By <a href="https://github.com/Sk09032" target="_blank">Sunny Kumar</a></span>
     </footer>
 <script src="/script.js"></script>
 </body>
