--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="skill-content">
             <div class="column left">
                 <div class="text"> My skills</div>
-                <p>I have a knowladge of differnt languages . You can see on right side , my experience in that perticular language</p>
+                <p>I have good experience in languages used for Web Development and App Development. For clarity I provided graphs on right side. </p>
             </div>
             <div class="column right">
                 <div class="bars">
@@ -169,11 +169,6 @@
                 </div>
             </div>
             <div class="card">
-                <div class="box">
-                    <img src="/Images/calculator.png" alt="image">
-                    <div class="text">BMI Calculator</div>
-                    <p>Right Body to Weight ratio is the sign of good health , So I decided to make to BMI calculator app using Flutter which helps the people to track their height to weight ratio  </p>
-                </div>
             </div>
             <div class="card">
                 <div class="box">
@@ -186,7 +181,7 @@
                 <div class="box">
                     <img src="/Images/VayaamSaala.png" alt="image">
                     <div class="text">VayaamSaala</div>
-                    <p>Fitness is the key of happy life . I observe that (for me) finding a good exercise for specific body part was difficult. So i made this project which help the people to find best exercise for specific body part easy . It also search youtube video of that exercises.  </p>
+                    <p>Fitness is the key of happy life . I observe that (in case of mine) finding a good exercise for specific body part was difficult. So i made this project which help the people to find best exercise for specific body part easily . It also search related youtube video of that exercises using rapid api.  </p>
                 </div>
             </div>
             <div class="card">
@@ -244,10 +239,10 @@
                     <form action="https://formsubmit.co/kgpian121@gmail.com" method="post">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" name="name" required>
+                                <input type="text" placeholder="Your Name" name="name" required>
                             </div>
                             <div class="field email">
-                                <input type="email" placeholder="Email" name="email" required>
+                                <input type="email" placeholder="Your Email id" name="email" required>
                                 <input type="hidden" name="_next" value="https://sk090.netlify.app/page/thankyou.html">
                                 <input type="hidden" name="_subject" value="new mail wooooo!!!">
                             </div>
@@ -256,7 +251,7 @@
                             <input type="text" placeholder="Subject" name="name" required>
                         </div>
                         <div class="field textarea">
-                            <input type="text" placeholder="Message" name="name" required>
+                            <input type="text" placeholder="Message...." name="name" required>
                         </div>
                         <div class="button">
                             <button type="submit">Send message</button>
