--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                <div class="text-1">Hello, My name is</div>
                <div class="text-2">Sunny Kumar</div>
                <div class="text-3">And I'm a <span class="typing"></span> </div>
-               <a href="/Images/Udemy Certificate.pdf" download><i class="fa fa-download" aria-hidden="true"></i>  Download My CV</a>
+               <a href="/Images/CV Sunny Kumar.pdf" download><i class="fa fa-download" aria-hidden="true"></i>  Download My CV</a>
            </div>
        </div>
    </section>
@@ -60,7 +60,7 @@
            </div>
            <div class="column right">
             <div class="text">I'm currenlty a 4th year UG student of the department of <span class="typing-2"></span> </div>
-            <p class="para">Hi myself Sunny Kumar . I am a student of Mechanical engineering department of IIT Kharagpur. I have intrest in IT sector. I did many projects related to web design and app Development, with the help of these project i learned a lot. I mentioned all projects and my knowladge in different programing language.   </p>
+            <p class="para"> at IIT Kharagpur. I build projects in free time. Already build many project related to Web Develpoment, some of them mentioned below in <a href="#projects">Project</a> section. I am currenlty learning everything  </p>
            </div>
            </div>
         </div>
@@ -169,8 +169,6 @@
                 </div>
             </div>
             <div class="card">
-            </div>
-            <div class="card">
                 <div class="box">
                     <img src="/Images/codeflix.png" alt="image">
                     <div class="text">CodeFlix</div>
@@ -251,7 +249,7 @@
                             <input type="text" placeholder="Subject" name="name" required>
                         </div>
                         <div class="field textarea">
-                            <input type="text" placeholder="Message...." name="name" required>
+                            <input type="text" placeholder="Message...." name="Message" required>
                         </div>
                         <div class="button">
                             <button type="submit">Send message</button>
