--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                <div class="text-1">Hello, My name is</div>
                <div class="text-2">Sunny Kumar</div>
                <div class="text-3">And I'm a <span class="typing"></span> </div>
-               <a href="/Images/CV Sunny Kumar.pdf" download><i class="fa fa-download" aria-hidden="true"></i>  Download My CV</a>
+               <a href="/Images/CVFinal.pdf" download><i class="fa fa-download" aria-hidden="true"></i>  Download My CV</a>
            </div>
        </div>
    </section>
@@ -60,7 +60,7 @@
            </div>
            <div class="column right">
             <div class="text">I'm currenlty a 4th year UG student of the department of <span class="typing-2"></span> </div>
-            <p class="para"> at IIT Kharagpur. I build projects in free time. Already build many project related to Web Develpoment, some of them mentioned below in <a href="#projects">Project</a> section. I am currenlty learning everything  </p>
+            <p class="para"> at IIT Kharagpur. I build projects in free time. Already build many project related to Web Develpoment, some of them mentioned below in <a href="#projects" style="color: red;">Project</a> section. I am currenlty learning everything.  </p>
            </div>
            </div>
         </div>
