--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                <div class="text-1">Hello, My name is</div>
                <div class="text-2">Sunny Kumar</div>
                <div class="text-3">And I'm a <span class="typing"></span> </div>
-               <a href="/Images/CVFinal.pdf" download><i class="fa fa-download" aria-hidden="true"></i>  Download My CV</a>
+               <a href="/Images/SunnyKumarCV.pdf" download><i class="fa fa-download" aria-hidden="true"></i>  Download My CV</a>
            </div>
        </div>
    </section>
@@ -78,7 +78,7 @@
                    <i class="fas fa-paint-brush"></i>
                    <div class="text">Web Development</div>
                    <p>HTML,CSS,JavaScript
-                     <br> Node.js,React.js,Mongodb <br> express.js,Bootstrap, jquery,materialUI,JSON,Mongoose</p>
+                     <br> Node.js,React.js,Mongodb,Redux <br> express.js,Bootstrap, jquery,materialUI,JSON,Mongoose</p>
                </div>
            </div>
 
@@ -162,13 +162,32 @@
         <h2 class="title">My Projects</h2>
         <div class="carousel owl-carousel owl-theme">
             <div class="card">
-                <div class="box">
+                <a href="https://github.com/Sk09032/color-zilla">
+                        <span class="link"></span>
+                    </a>
+                <div class="box" >
+                    
                     <img src="/Images/colour Zilla.png" alt="image">
                     <div class="text">Color Zilla</div>
                     <p>This is the simple chrome extention which pick colour in hex code from current active window and get copied automatically in clipboard.  </p>
                 </div>
             </div>
+            
             <div class="card">
+                <a href="https://mockstockfront-git-main-chhadios.vercel.app/">
+                        <span class="link"></span>
+                    </a>
+                <div class="box">
+                    <img src="/Images/StockMarket.png" alt="image">
+                    <div class="text">StockMarket</div>
+                    <p>This is a StockMarket app,where peoples can buy stocks of different company on the platform.with white and dark theme, live up and down graphs of various company and payment history,Authentication used to register and login, peoples can create profile and can edit in future. </p>
+                </div>
+
+            </div>
+            <div class="card">
+                <a href="https://github.com/Sk09032/Dosti">
+                        <span class="link"></span>
+                    </a>
                 <div class="box">
                     <img src="/Images/codeflix.png" alt="image">
                     <div class="text">CodeFlix</div>
@@ -176,6 +195,9 @@
                 </div>
             </div>
             <div class="card">
+                <a href="https://vayaamsaala.netlify.app/">
+                        <span class="link"></span>
+                    </a>
                 <div class="box">
                     <img src="/Images/VayaamSaala.png" alt="image">
                     <div class="text">VayaamSaala</div>
@@ -183,6 +205,9 @@
                 </div>
             </div>
             <div class="card">
+                <a href="https://github.com/Sk09032/Rangeela--change-console-logs">
+                        <span class="link"></span>
+                    </a>
                 <div class="box">
                     <img src="/Images/rangeela.png" alt="image">
                     <div class="text">Rangeela</div>
@@ -190,9 +215,22 @@
                 </div>
             </div>
             <div class="card">
+                <a href="https://sk090.netlify.app/">
+                        <span class="link"></span>
+                    </a>
                 <div class="box">
                     <img src="/Images/portfolio.png" alt="image">
                     <div class="text">Portfolio</div>
+                    <p>I created this site to describe myself, also to mention all my skills and all my projects on single platform. </p>
+                </div>
+            </div>
+            <div class="card">
+                <a href="https://mausambaba.netlify.app/">
+                        <span class="link"></span>
+                    </a>
+                <div class="box">
+                    <img src="/Images/Weather.png" alt="image">
+                    <div class="text">Weather</div>
                     <p>I created this site to describe myself, also to mention all my skills and all my projects on single platform. </p>
                 </div>
             </div>
