edited for placement

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                <img src="/Images/img.jpg" alt="">
            </div>
            <div class="column right">
-            <div class="text">I'm currenlty a 4th year UG student of the department of <span class="typing-2"></span> </div>
-            <p class="para"> at IIT Kharagpur. I build projects in free time. Already build many project related to Web Develpoment, some of them mentioned below in <a href="#projects" style="color: red;">Project</a> section. I am currenlty learning everything.  </p>
+            <div class="text">I'm currenlty a 5th year UG student of the department of <span class="typing-2"></span> </div>
+            <p class="para"> at IIT Kharagpur.  I build projects in my free time and have already built numerous projects related to web development, some of which are mentioned below in the <a href="#projects" style="color: red;">Project</a> section. I am currently in the process of learning various skills.  </p>
            </div>
            </div>
         </div>
@@ -78,8 +78,8 @@
                <div class="box">
                    <i class="fas fa-paint-brush"></i>
                    <div class="text">Web Development</div>
-                   <p>HTML,CSS,JavaScript
-                     <br> Node.js,React.js,Mongodb,Redux <br> express.js,Bootstrap, jquery,materialUI,JSON,Mongoose</p>
+                   <p>HTML,&nbsp;CSS,&nbsp;JavaScript
+                     <br> Node.js,&nbsp;React.js,&nbsp;Mongodb,&nbsp;Redux <br> express.js,&nbsp;Bootstrap,&nbsp;jquery,&nbsp; JSON,&nbsp;MongoDB</p>
                </div>
            </div>
 
@@ -88,7 +88,7 @@
             <div class="box">
                 <i class="fas fa-mobile"></i>
                 <div class="text">Flutter Development</div>
-                <p>Basics knowladge</p>
+                <p>Basics Knowladge</p>
             </div>
         </div>
 
@@ -97,7 +97,7 @@
             <div class="box">
                 <i class="fas fa-code"></i>
                 <div class="text">Data Structure and Algorithm</div>
-                <p>Applied Data Structures and Algorithms(AlgoZenith-AZ201)</p>
+                <p>Applied Data Structures and Algorithms (AlgoZenith-AZ201)</p>
             </div>
         </div>
 
@@ -113,7 +113,7 @@
         <div class="skill-content">
             <div class="column left">
                 <div class="text"> My skills</div>
-                <p>I have good experience in languages used for Web Development and App Development. For clarity I provided graphs on right side. </p>
+                <p>I have a solid experience in programming languages used for Web Development and App Development. To enhance clarity, I have incorporated graphs on the right side. </p>
             </div>
             <div class="column right">
                 <div class="bars">
@@ -146,8 +146,15 @@
                 </div>
                 <div class="bars">
                     <div class="info">
+                        <span>MERN</span>
+                        <span>70%</span>
+                    </div>
+                    <div class="line MERN"></div>
+                </div>
+                <div class="bars">
+                    <div class="info">
                         <span>DSA</span>
-                        <span>60%</span>
+                        <span>80%</span>
                     </div>
                     <div class="line DSA"></div>
                 </div>
@@ -163,64 +170,94 @@
         <h2 class="title">My Projects</h2>
         <div class="carousel owl-carousel owl-theme">
             <div class="card">
-                <a href="https://github.com/Sk09032/color-zilla">
+                <a href="https://ecommerce-flax-nine.vercel.app/" target="_blank">
+                        <span class="link"></span>
+                    </a>
+                <div class="box">
+                    <img src="/Images/E-commerce.png" alt="image">
+                    <div class="text">E-commerce</div>
+                    <p>Developed a complete MERN E-commerce site akin to Amazon, Ajio, and Flipkart. Features include product filtering, user authentication, cart management, order tracking, and an admin panel for order status updates. </p>
+                </div>
+            </div>
+            <div class="card">
+                <a href="https://movieflix-beta-nine.vercel.app/" target="_blank">
+                        <span class="link"></span>
+                    </a>
+                <div class="box">
+                    <img src="/Images/Movieflix.png" alt="image">
+                    <div class="text">Movieflix</div>
+                    <p>Created a responsive movie site using TMDB API. Users can search movies, view ratings, trailers, and explore trending, popular, and top-rated sections with filters for days, weeks, genres, and popularity. </p>
+                </div>
+            </div>
+            <div class="card">
+                <a href="https://github.com/Sk09032/rubik-s-cube" target="_blank">
+                        <span class="link"></span>
+                    </a>
+                <div class="box">
+                    <img src="/Images/rubik's.png" alt="image">
+                    <div class="text">Rubik's Cube Solver</div>
+                    <p>Developed a virtual 3x3 Rubik's Cube solver with 3 distinct models in C++, utilizing common data structures and Algorithm. Achieved 3-second solving using BFS, DFS, and IDDFS, and 10-second solving with Korf's IDA* Algorithm. </p>
+                </div>
+            </div>
+            <div class="card">
+                <a href="https://github.com/Sk09032/algosortvision" target="_blank">
+                        <span class="link"></span>
+                    </a>
+                <div class="box">
+                    <img src="/Images/Algosort.png" alt="image">
+                    <div class="text">AlgoSort Vision</div>
+                    <p>Developed a site which display all sorting Algorithm present in DSA through animations </p>
+                </div>
+            </div>
+            <div class="card">
+                <a href="https://github.com/Sk09032/color-zilla" target="_blank">
                         <span class="link"></span>
                     </a>
                 <div class="box" >
                     
                     <img src="/Images/colour Zilla.png" alt="image">
                     <div class="text">Color Zilla</div>
-                    <p>This is the simple chrome extention which pick colour in hex code from current active window and get copied automatically in clipboard.  </p>
+                    <p>This is a straightforward Chrome extension that captures the color in hexadecimal code from the currently active window and automatically copies it to the clipboard.  </p>
                 </div>
             </div>
             <div class="card">
-                <a href="https://github.com/Sk09032/Dosti">
+                <a href="https://dosti-five.vercel.app/" target="_blank">
                         <span class="link"></span>
                     </a>
                 <div class="box">
-                    <img src="/Images/codeflix.png" alt="image">
+                    <img src="/Images/editor.png" alt="image">
                     <div class="text">CodeFlix</div>
-                    <p>This Project is inspired by coding in friendcircle . In this web app multiple friends can do code on single platform by creating a room . All friends will get notification when someone join and leave. </p>
+                    <p>This project is inspired by coding within a friend circle. In this web application, multiple friends can collaborate on coding together by creating a shareable room id. Any changes made by anyone will be visible to all members present in the room </p>
                 </div>
             </div>
             <div class="card">
-                <a href="https://vayaamsaala.netlify.app/">
+                <a href="https://vayaamsaala.netlify.app/" target="_blank">
                         <span class="link"></span>
                     </a>
                 <div class="box">
                     <img src="/Images/VayaamSaala.png" alt="image">
                     <div class="text">VayaamSaala</div>
-                    <p>Fitness is the key of happy life . I observe that (in case of mine) finding a good exercise for specific body part was difficult. So i made this project which help the people to find best exercise for specific body part easily . It also search related youtube video of that exercises using rapid api.  </p>
+                    <p>Fitness is the cornerstone of a happy life. I noticed that, in my case, discovering effective exercises for specific body parts was challenging. As a solution, I developed this project to assist people in easily finding the best exercises for particular body parts. Additionally, it searches for related YouTube videos of these exercises using the Rapid API.  </p>
                 </div>
             </div>
             <div class="card">
-                <a href="https://github.com/Sk09032/Rangeela--change-console-logs">
-                        <span class="link"></span>
-                    </a>
-                <div class="box">
-                    <img src="/Images/rangeela.png" alt="image">
-                    <div class="text">Rangeela</div>
-                    <p>This is the Simple Project . Which change the console log colour. </p>
-                </div>
-            </div>
-            <div class="card">
-                <a href="https://sk090.netlify.app/">
+                <a href="https://portfolio-dusky-eight-60.vercel.app/" target="_blank">
                         <span class="link"></span>
                     </a>
                 <div class="box">
                     <img src="/Images/portfolio.png" alt="image">
                     <div class="text">Portfolio</div>
-                    <p>I created this site to describe myself, also to mention all my skills and all my projects on single platform. </p>
+                    <p>I designed this website to provide an overview of myself, showcasing my skills and compiling all my projects in one central platform. </p>
                 </div>
             </div>
             <div class="card">
-                <a href="https://mausambaba.netlify.app/">
+                <a href="https://weatherforecast-ten.vercel.app/" target="_blank">
                         <span class="link"></span>
                     </a>
                 <div class="box">
                     <img src="/Images/Weather.png" alt="image">
                     <div class="text">Weather</div>
-                    <p>I created this site to describe myself, also to mention all my skills and all my projects on single platform. </p>
+                    <p>I developed this web application to provide real-time weather information using the OpenWeather API. It offers users the convenience of accessing current weather data all in one place. </p>
                 </div>
             </div>
         </div>
