--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="column right">
                 <div class="bars">
                     <div class="info">
-                        <span>HTML</span>
+                        <span>Python</span>
                         <span>80%</span>
                     </div>
                     <div class="line HTML"></div>
