--- a/index.html
+++ b/index.html
@@ -119,42 +119,42 @@
                 <div class="bars">
                     <div class="info">
                         <span>Python</span>
-                        <span>80%</span>
+                        <span>70%</span>
                     </div>
                     <div class="line HTML"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
-                        <span>CSS</span>
-                        <span>70%</span>
+                        <span>Numpy</span>
+                        <span>80%</span>
                     </div>
                     <div class="line CSS"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
-                        <span>JavaScript</span>
-                        <span>60%</span>
+                        <span>Pandas</span>
+                        <span>80%</span>
                     </div>
                     <div class="line JavaScript"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
-                        <span>Flutter</span>
-                        <span>40%</span>
+                        <span>Fine tuning</span>
+                        <span>60%</span>
                     </div>
                     <div class="line Flutter"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
-                        <span>MERN</span>
-                        <span>70%</span>
+                        <span>Langchain</span>
+                        <span>60%</span>
                     </div>
                     <div class="line MERN"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
                         <span>DSA</span>
-                        <span>80%</span>
+                        <span>70%</span>
                     </div>
                     <div class="line DSA"></div>
                 </div>
