--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                <img src="/Images/img.jpg" alt="">
            </div>
            <div class="column right">
-            <div class="text">I'm currenlty a 5th year UG student of the department of <span class="typing-2"></span> </div>
-            <p class="para"> at IIT Kharagpur.  I build projects in my free time and have already built numerous projects related to web development, some of which are mentioned below in the <a href="#projects" style="color: red;">Project</a> section. I am currently in the process of learning various skills.  </p>
+            <div class="text">I'm currently a 2024 passout UG student of the department of <span class="typing-2"></span> </div>
+            <p class="para"> from IIT Kharagpur,  passionate about Data Science. I’ve built <a href="#projects" style="color: red;">project</a> in machine learning and data analysis, and I’m actively developing my skills in AI, with a focus on real-world applications. I am currently in the process of learning various skills.  </p>
            </div>
            </div>
         </div>
