--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
            </div>
            <div class="column right">
             <div class="text">I'm currently a 2024 passout UG student of the department of <span class="typing-2"></span> </div>
-            <p class="para"> from IIT Kharagpur,  passionate about Data Science. I’ve built <a href="#projects" style="color: red;">project</a> in machine learning and data analysis, and I’m actively developing my skills in AI, with a focus on real-world applications. I am currently in the process of learning various skills.  </p>
+            <p class="para"> from IIT Kharagpur,  passionate about Data Science. I’ve built <a href="#projects" style="color: red;">project</a> in machine learning and data analysis, and I’m actively developing my skills in Data Science, with a focus on real-world applications. I am currently in the process of learning various skills.  </p>
            </div>
            </div>
         </div>
@@ -77,22 +77,21 @@
            <div class="cards">
                <div class="box">
                    <i class="fas fa-paint-brush"></i>
+                   <div class="text">Data Scientist</div>
+                   <p>Python,&nbsp;Numpy,&nbsp;Pandas
+                     <br>Matplotlib,&nbsp;,&nbsp;LangChain,&nbsp;HuggingFace <br> LLMs,&nbsp;Seaborn</p>
+               </div>
+           </div>
+
+           <div class="cards">
+               <div class="box">
+                   <i class="fas fa-paint-brush"></i>
                    <div class="text">Web Development</div>
                    <p>HTML,&nbsp;CSS,&nbsp;JavaScript
                      <br> Node.js,&nbsp;React.js,&nbsp;Mongodb,&nbsp;Redux <br> express.js,&nbsp;Bootstrap,&nbsp;jquery,&nbsp; JSON,&nbsp;MongoDB</p>
                </div>
            </div>
-
-
-         <div class="cards">
-            <div class="box">
-                <i class="fas fa-mobile"></i>
-                <div class="text">Flutter Development</div>
-                <p>Basics Knowladge</p>
-            </div>
-        </div>
-
-
+           
         <div class="cards">
             <div class="box">
                 <i class="fas fa-code"></i>
